--- a/src/styles/saveTheDate.scss
+++ b/src/styles/saveTheDate.scss
@@ -3,6 +3,11 @@ html, body {
     margin: 0;
 }
 
+p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
 .save-the-date {
     &__container {
         box-sizing: border-box;
@@ -24,11 +29,20 @@ html, body {
     &__image {
         height: 400px;
         margin: 0 2rem;
+        border: 5px solid white;
+        box-shadow: 0 0 8px rgba(0,0,0,.4);
+        -moz-box-shadow: 0 0 8px rgba(0,0,0,.4);
+        -webkit-box-shadow: 0 0 8px rgba(0,0,0,.4);
     }
     &__main {
         justify-self: center;
         margin: 5%;
         display: flex;
         flex-direction: row;
+    }
+    &__text-area {
+        margin: 2rem 0;
+        text-align: center;
+        width: 400px;
     }
 }
