--- a/src/styles/saveTheDate.scss
+++ b/src/styles/saveTheDate.scss
@@ -63,5 +63,8 @@ p {
         > * {
             opacity: 0.9;
         }
+        &--information {
+            font-family: 'Copperplate', sans-serif;
+        }
     }
 }
