adding background image plugins

--- a/src/styles/saveTheDate.scss
+++ b/src/styles/saveTheDate.scss
@@ -19,7 +19,7 @@ p {
 
 .save-the-date {
     &__container {
-        background: url("../images/background.png");
+        //background: url("../images/background.png");
         background-size: cover;
         box-sizing: border-box;
         display: grid;
