--- a/src/styles/saveTheDate.scss
+++ b/src/styles/saveTheDate.scss
@@ -36,13 +36,35 @@ p {
         align-items: center;
         justify-content: center;
     }
-    &__image {
-        height: 500px;
-        margin: 0 2rem;
-        border: 5px solid white;
-        box-shadow: 0 0 8px rgba(0,0,0,.4);
-        -moz-box-shadow: 0 0 8px rgba(0,0,0,.4);
-        -webkit-box-shadow: 0 0 8px rgba(0,0,0,.4);
+    &__floating-text {
+        //transform: rotate(-3deg);
+        font-size: 3rem;
+        font-family: 'Lobster', cursive;
+        color: white;
+        position: relative;
+        margin-right: -200px;
+        top: 300px;
+        height: 5rem;
+        text-align: center;
+        flex-shrink: 0;
+        //min-height: 100%;
+        //background-image: linear-gradient(#99a6ff, #c4aaff);
+        //margin: 0; //margin: 1rem;
+        //padding: 1.6rem;
+        //max-width: 300px;
+    }
+    &__image-and-text {
+        display: flex;
+        flex-direction: row;
+        box-shadow: 0 1px 2px rgba(0,0,0,0.07),
+        0 2px 4px rgba(0,0,0,0.07),
+        0 4px 8px rgba(0,0,0,0.07),
+        0 8px 16px rgba(0,0,0,0.07),
+        0 16px 32px rgba(0,0,0,0.07);
+        //0 32px 64px rgba(0,0,0,0.07);
+        //box-shadow: 0 0 8px rgba(0,0,0,.4);
+        //-moz-box-shadow: 0 0 8px rgba(0,0,0,.4);
+        //-webkit-box-shadow: 0 0 8px rgba(0,0,0,.4);
     }
     &__main {
         justify-self: center;
@@ -50,16 +72,18 @@ p {
         display: flex;
         flex-direction: row;
     }
+    &__image {
+        height: 500px;
+        margin: 0; // 2rem;
+    }
     &__text-area {
+        min-height: 100%;
         flex-shrink: 0;
-        background-image: linear-gradient(#FFF5D7, #ebe1c6);
-        margin: 1rem;
+        background-image: linear-gradient(#FFF5D7, #ebe1c6); //#99a6ff, #c4aaff
+        margin: 0; //margin: 1rem;
         padding: 1.6rem;
         text-align: center;
         max-width: 300px;
-        box-shadow: 0 0 8px rgba(0,0,0,.4);
-        -moz-box-shadow: 0 0 8px rgba(0,0,0,.4);
-        -webkit-box-shadow: 0 0 8px rgba(0,0,0,.4);
         > * {
             opacity: 0.9;
         }
