--- a/src/styles/saveTheDate.scss
+++ b/src/styles/saveTheDate.scss
@@ -38,6 +38,7 @@ p {
     }
     &__floating-text {
         //transform: rotate(-3deg);
+        text-shadow: 0 2px 2px rgba(0, 0, 0, 1);
         font-size: 3rem;
         font-family: 'Lobster', cursive;
         color: white;
@@ -56,12 +57,7 @@ p {
     &__image-and-text {
         display: flex;
         flex-direction: row;
-        box-shadow: 0 1px 2px rgba(0,0,0,0.07),
-        0 2px 4px rgba(0,0,0,0.07),
-        0 4px 8px rgba(0,0,0,0.07),
-        0 8px 16px rgba(0,0,0,0.07),
-        0 16px 32px rgba(0,0,0,0.07);
-        //0 32px 64px rgba(0,0,0,0.07);
+        box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.1);
         //box-shadow: 0 0 8px rgba(0,0,0,.4);
         //-moz-box-shadow: 0 0 8px rgba(0,0,0,.4);
         //-webkit-box-shadow: 0 0 8px rgba(0,0,0,.4);
