--- a/src/styles/saveTheDate.scss
+++ b/src/styles/saveTheDate.scss
@@ -38,7 +38,7 @@ p {
     }
     &__floating-text {
         //transform: rotate(-3deg);
-        text-shadow: 0 2px 2px rgba(0, 0, 0, 1);
+        text-shadow: 0 2px 2px rgba(0, 0, 0, 1); //    text-shadow: -2px 4px 0px black;
         font-size: 3rem;
         font-family: 'Lobster', cursive;
         color: white;
