--- a/src/styles/saveTheDate.scss
+++ b/src/styles/saveTheDate.scss
@@ -1,9 +1,3 @@
-html, body {
-    height: 100%;
-    margin: 0;
-    overflow: auto;
-}
-
 p {
     margin-block-start: 0;
     margin-block-end: 0;
@@ -15,6 +9,9 @@ p {
     .save-the-date__floating-text, .save-the-date__image-and-text > :not(.save-the-date__text-area)  {
         display: none !important;
     }
+    .save-the-date__main  {
+        margin-left: 0 !important;
+    }
 }
 
 .save-the-date {
@@ -25,22 +22,34 @@ p {
         min-height: 100%;
     }
     &__container {
+        position: absolute;
         display: grid;
-        grid-template-rows: auto auto auto;
-        grid-template-columns: auto 1fr auto;
-        height: 100vh;
+        grid-template-areas:
+            'header header header'
+            '. main .'
+            'footer footer footer';
+        grid-template-rows: 1fr auto 1fr;
+        grid-template-columns: 1fr auto 1fr;
+        min-height: 100%;
+        width: 100%;
     }
     &__header {
-        box-sizing: border-box;
-        background-color: black;
-        width: 100%;
-        padding: 1rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        grid-area: header;
+        min-height: 35px;
     }
+    //&__footer {
+    //    grid-area: footer;
+    //}
+    //&__header {
+    //    box-sizing: border-box;
+    //    background-color: black;
+    //    width: 100%;
+    //    padding: 1rem;
+    //    display: flex;
+    //    align-items: center;
+    //    justify-content: center;
+    //}
     &__floating-text {
-        //transform: rotate(-3deg);
         text-shadow: 0 2px 0 rgba(0, 0, 0, 1); //    text-shadow: -2px 4px 0px black;
         font-size: 3rem;
         font-family: 'Lobster', cursive;
@@ -62,18 +71,16 @@ p {
         display: flex;
         flex-direction: row;
         box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.1);
-        //box-shadow: 0 0 8px rgba(0,0,0,.4);
-        //-moz-box-shadow: 0 0 8px rgba(0,0,0,.4);
-        //-webkit-box-shadow: 0 0 8px rgba(0,0,0,.4);
     }
     &__main {
-        grid-column-start: 2;
-        grid-row-start: 2;
+        grid-area: main;
         justify-self: center;
-        margin: 5%;
+        align-self: center;
+        //margin: auto;
         display: flex;
         flex-direction: row;
         height: 500px;
+        margin-left: 50px;
     }
     &__image {
         height: 500px;
@@ -91,7 +98,7 @@ p {
             opacity: 0.9;
         }
         &--information {
-            font-family: 'Copperplate', sans-serif;
+            font-family: 'Copperplate Light', 'Copperplate', sans-serif;
         }
     }
 }
