fixing webfont and styling issues

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,9 @@
-html, body, #___gatsby {
-    height: 100%;
+html {
     overflow: auto;
+}
+
+html, body, #___gatsby, #gatsby-focus-wrapper {
+    height: 100%;
 }
 
 html, body {
