--- a/src/styles/saveTheDate.scss
+++ b/src/styles/saveTheDate.scss
@@ -15,11 +15,16 @@ p {
 }
 
 .save-the-date {
+    $content-vertical-margin: 35px;
+    $content-height: 500px;
+    $content-min-width: 300px;
     &__background {
         background-size: cover;
         box-sizing: border-box;
         width: 100%;
-        min-height: 100%;
+        min-width: $content-min-width + (2 * $content-vertical-margin);
+        height: 100%;
+        min-height: $content-height + (2 * $content-vertical-margin);
     }
     &__container {
         position: absolute;
@@ -35,7 +40,7 @@ p {
     }
     &__header {
         grid-area: header;
-        min-height: 35px;
+        min-height: $content-vertical-margin;
     }
     //&__footer {
     //    grid-area: footer;
@@ -79,7 +84,7 @@ p {
         //margin: auto;
         display: flex;
         flex-direction: row;
-        height: 500px;
+        height: $content-height;
         margin-left: 50px;
     }
     &__image {
@@ -93,12 +98,12 @@ p {
         margin: 0; //margin: 1rem;
         padding: 2rem;
         text-align: center;
-        max-width: 300px;
+        max-width: $content-min-width;
         > * {
             opacity: 0.9;
         }
         &--information {
-            font-family: 'Copperplate Light', 'Copperplate', sans-serif;
+            font-family: 'Playfair Display SC', 'Copperplate', serif;
         }
     }
 }
