sliding form layout completed

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,10 @@ div[role="group"][tabindex] {
     height: 100%;
 }
 
+fieldset {
+    border: none;
+}
+
 //@font-face {
 //    font-family: 'Market Deco';
 //    src: local('Market Deco'), url(../fonts/market_deco.ttf) format('truetype');
