--- a/src/styles/addressForm.scss
+++ b/src/styles/addressForm.scss
@@ -9,7 +9,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
+}
+
+.address-form legend {
+    margin-bottom: 20px;
 }
 
 .address-form {
@@ -20,7 +24,7 @@
         background: rgba(255, 245, 215, 0.21);
 
         width: 80%;
-        margin: 20px auto;
+        margin: 17px auto;
         padding: 0 5px;
 
         &#address {
@@ -28,7 +32,8 @@
             //vertical-align: bottom;
             resize: none;
             overflow: auto;
-            max-height: 7em;
+            height: 60px;
+            flex-shrink: 0;
         }
     }
 }
