--- a/src/styles/saveTheDate.scss
+++ b/src/styles/saveTheDate.scss
@@ -7,6 +7,16 @@ button {
     }
 }
 
+button, input, textarea {
+    transition: all 0.3s ease;
+    &:focus {
+        outline: none;
+        box-shadow: 0 0 0 3px rgba(255, 145, 18, 0.73);
+    }
+//    &:active {
+//        background-color: #c4aaff;
+//    }
+}
 p {
     margin-block-start: 0;
     margin-block-end: 0;
@@ -144,7 +154,7 @@ $content-button-section: 90px;
             $button-height: 40px;
             height: $content-button-section;
             button {
-                height: $button-height;
+                max-height: $button-height;
                 margin: ($content-button-section - $button-height)/2;
             }
         }
