--- a/src/styles/addressForm.scss
+++ b/src/styles/addressForm.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    margin-bottom: 0;
 }
 
 .address-form legend {
@@ -15,7 +16,7 @@
         border: none;
         //border-bottom: black 1px solid;
         //background-color: transparent;
-        background: rgba(255, 245, 215, 0.21);
+        background: rgba(255, 145, 18, 0.22);
 
         width: 80%;
         margin: 17px auto;
@@ -32,3 +33,39 @@
     }
 }
 
+.address-form__submit-message {
+    margin-top: 10px;
+    font-size: 85%;
+    line-height: 85%;
+}
+
+.address-form__loader {
+    &--wrapper {
+        height: 0;
+        width: 0;
+        position: relative
+    }
+    &--indicator {
+        position: absolute
+    }
+}
+
+#loading {
+    margin-left: 15px;
+    margin-top: 4px;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    border: 3px solid rgba(255, 120, 0, 0.8);
+    border-radius: 50%;
+    border-top-color: #fff;
+    animation: spin 1s ease-in-out infinite;
+    -webkit-animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+    to { -webkit-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    to { -webkit-transform: rotate(360deg); }
+}
