updating publish scripts

--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -4,10 +4,11 @@
     align-items: center
 
     padding: 1rem
+    margin: 1rem
 
-    background-color: #663399
+    background-color: #745eff
 
-    font-size: 1.25rem
+    //font-size: 1.25rem
     .Logo
         background-color: white
         border-radius: 50%
