--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,6 +18,10 @@ fieldset {
     border: none;
 }
 
+body {
+    background-color: #fff0e6;
+}
+
 //@font-face {
 //    font-family: 'Market Deco';
 //    src: local('Market Deco'), url(../fonts/market_deco.ttf) format('truetype');
