--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -13,6 +13,7 @@
         background-color: white
         border-radius: 50%
         border: 4px solid white
+        margin-bottom: 0
     .LanguageSwitcher
         display: inline
         margin-left: 1em
