--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -2,7 +2,7 @@
     position: relative;
     min-height: 100vh;
 }
-$footer-height: 2.5rem;
+$footer-height: 2.0rem;
 
 #content-wrap {
     padding: 1rem 1rem $footer-height;
@@ -12,7 +12,13 @@ $footer-height: 2.5rem;
 #footer {
     position: absolute;
     bottom: 0;
+    font-size: 80%;
     width: 100%;
     height: $footer-height;
-    text-align: center;
+    text-align: right;
+    padding-right: 30px;
 }
+
+//p {
+//    margin-bottom: 1.6rem;
+//}
