modifying lodging page and integration of maps

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -37,6 +37,26 @@ main.standard-page > section {
     text-align: left;
 }
 
+.two-columns {
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    main {
+        margin: 0 25px;
+    }
+    div#mapid {
+        margin: 0 25px;
+    }
+}
+
+.flex-grow {
+    flex-grow: 1;
+}
+
+div#mapid {
+    margin: 0 auto;
+}
+
 //@font-face {
 //    font-family: 'Market Deco';
 //    src: local('Market Deco'), url(../fonts/market_deco.ttf) format('truetype');
