--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -4,9 +4,9 @@
     align-items: center
 
     padding: 1rem
-    margin: 0 0 25px
+    margin: 0 0
 
-    background-color: #745eff
+    background: none
 
     //font-size: 1.25rem
     .Logo
