--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -1,12 +1,18 @@
 #page-container {
     position: relative;
-    min-height: 100vh;
+    height: 100vh;
+    width: 100%;
+    display: grid;
+    grid-template-rows: auto auto auto;
 }
 $footer-height: 2.0rem;
 
 #content-wrap {
     padding: 1rem 1rem $footer-height;
     text-align: center;
+    background: rgba(255, 255, 255, 0.9);
+    overflow-y: scroll;
+    height: 100%;
 }
 
 #footer {
@@ -18,7 +24,3 @@ $footer-height: 2.0rem;
     text-align: right;
     padding-right: 30px;
 }
-
-//p {
-//    margin-bottom: 1.6rem;
-//}
