--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -3,7 +3,7 @@
     grid-template-columns: 100px 1fr
     align-items: center
 
-    padding: 1rem
+    padding: 18px
     margin: 0 0
 
     background: none
