--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -1,11 +1,13 @@
+$header-height: 80px + 36px;
+
 #page-container {
     position: relative;
     height: 100vh;
     width: 100%;
     display: grid;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: $header-height auto auto;
 }
-$footer-height: 2.0rem;
+$footer-height: 3.0rem;
 
 #content-wrap {
     padding: 1rem 1rem $footer-height;
@@ -18,9 +20,15 @@ $footer-height: 2.0rem;
 #footer {
     position: absolute;
     bottom: 0;
+    //background: rgba(255, 255, 255, 0.9);
     font-size: 80%;
     width: 100%;
     height: $footer-height;
     text-align: right;
     padding-right: 30px;
+    > span {
+        position: absolute;
+        bottom: 20px;
+        right: 30px;
+    }
 }
