--- a/src/components/RSVPForm/RSVPform.scss
+++ b/src/components/RSVPForm/RSVPform.scss
@@ -1,32 +1,38 @@
-.rsvp-form {
-    button {
-        $top-of-gradient: #FFF5D7;
-        $btm-of-gradient: #ffce80;
-        background-image: linear-gradient($top-of-gradient, $btm-of-gradient);
+/* RGB */
+$palette-orange: rgba(218, 133, 90, 1);
+$palette-purple: rgba(61, 58, 95, 1);
+$palette-red: rgba(195, 49, 73, 1);
+$palette-green: rgba(168, 194, 86, 1);
+$palette-off-white: rgba(243, 217, 177, 1);
 
-        &:hover {
-            background-image: linear-gradient(darken($top-of-gradient, 5%), darken($btm-of-gradient, 5%));
-        }
+// TODO: get scss import working
 
-        &:active {
-            background-image: linear-gradient(darken($top-of-gradient, 10%), darken($btm-of-gradient, 10%));
-        }
-        &:focus {
-            box-shadow: none;
-        }
+@mixin button-gradient($btm-color: #ffce80, $top-color: #FFF5D7) {
+    background-image: linear-gradient($top-color, $btm-color);
+
+    &:hover {
+        background-image: linear-gradient(darken($top-color, 5%), darken($btm-color, 5%));
+    }
+
+    &:active {
+        background-image: linear-gradient(darken($top-color, 10%), darken($btm-color, 10%));
+    }
+    &:focus {
+        box-shadow: none;
     }
 }
 
 .rsvp-button {
-    //&--yes {
-    //    background: green;
-    //}
-    //&--no {
-    //    background: red;
-    //}
-    //&--maybe {
-    //    background: yellow;
-    //}
+
+    &--yes {
+        @include button-gradient($palette-green);
+    }
+    &--no {
+        @include button-gradient($palette-red);
+    }
+    &--maybe {
+        @include button-gradient($palette-orange);
+    }
     &--unselected {
         opacity: 0.5;
     }
