--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -5,7 +5,7 @@ $header-height: 80px + 36px;
     height: 100vh;
     width: 100%;
     display: grid;
-    grid-template-rows: $header-height auto auto;
+    grid-template-rows: $header-height 1fr auto;
 }
 $footer-height: 3.0rem;
 
@@ -13,7 +13,7 @@ $footer-height: 3.0rem;
     padding: 1rem 1rem $footer-height;
     text-align: center;
     background: rgba(255, 255, 255, 0.9);
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 100%;
 }
 
