--- a/src/components/Timeline/Timeline.scss
+++ b/src/components/Timeline/Timeline.scss
@@ -5,6 +5,9 @@ $node-total-width: $node-size;
 $line-width: 4px;
 $grid-h-gap: 20px;
 
+$palette-purple: rgba(61, 58, 95, 1);
+$palette-purple-light: lighten(rgba(61, 58, 95, 1), 20%);
+
 .timeline--grid {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -26,7 +29,7 @@ $grid-h-gap: 20px;
     //height: $node-size + ($grid-h-gap * 2);
     height: 175%;
     width: $line-width;
-    background-color: black;
+    background-color: $palette-purple;
     position: absolute;
     left: ($node-total-width - $line-width)/2;
     top: 0;
@@ -41,8 +44,9 @@ $grid-h-gap: 20px;
     height: $node-size;
     border-radius: $node-size/2;
     color: white;
-    background-color: #745eff;
-    border: 1px solid black;
+    //background-image: linear-gradient(#745eff, $palette-purple);
+    background-color: $palette-purple-light;
+    border: 1px solid white;
     z-index: 3;
 }
 
