--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+$palette-orange: rgba(218, 133, 90, 1);
+
 html {
     overflow: auto;
 }
@@ -68,7 +70,7 @@ button, input, textarea {
 
     &:focus {
         outline: none;
-        box-shadow: 0 0 0 3px rgba(255, 145, 18, 0.73);
+        box-shadow: 0 0 0 3px lighten($palette-orange, 20%);
     }
 }
 
