some text announcements and general touch-ups for release

--- a/src/components/RSVPForm/RSVPform.scss
+++ b/src/components/RSVPForm/RSVPform.scss
@@ -23,6 +23,7 @@ $palette-off-white: rgba(243, 217, 177, 1);
 }
 
 .rsvp-form {
+    flex-grow: 1;
     &__row {
         margin-bottom: 10px;
     }
