style edits, mostly RSVP

--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -19,6 +19,8 @@
         margin-left: 1em
     a
         color: white
+        font-weight: bold
+        text-shadow: 0 0 2px black
     nav > a
         margin-left: 1em
         &:first-child
